--- a/src/app/template/layout/layout.component.html
+++ b/src/app/template/layout/layout.component.html
@@ -1,1 +1,31 @@
-<p>layout works!</p>
+<header class="bg-gradient-to-r from-blue-500 to-blue-700 text-white p-6 shadow-1g">
+  <div class="text-center">
+    <h1 class="text-3x1 font-bold">Título</h1>
+    <p class="text-lg mt-2">Subtitulo</p>
+
+    <div class="mt-4">
+      <hr class="border-t border-blue-300 opacity-50" />
+    </div>
+
+    <nav class="mt-4">
+      <ul class="flex justify-center space-x-6 text-white font-semibold">
+        <li>
+          <a class="hover:text-yellow-300">Galeria</a>
+        </li>
+        <li>
+          <a class="hover:text-yellow-300">Categorias</a>
+        </li>
+        <li>
+          <a class="hover:text-yellow-300">Lugares</a>
+        </li>
+        <li>
+          <a class="hover:text-yellow-300">Sair</a>
+        </li>
+      </ul>
+
+    </nav>
+
+  </div>
+
+</header>
+
