--- a/src/app/template/layout/layout.component.html
+++ b/src/app/template/layout/layout.component.html
@@ -29,3 +29,11 @@
 
 </header>
 
+<router-outlet></router-outlet>
+
+<footer class="bg-gray-200 text-center p-4 mt-6">
+  <p class="text-gray-600 text-sm">2025 Lugares legais. Todos os direitos resevados.</p>
+
+</footer>
+
+
