--- a/src/app/categorias/categorias/categorias.component.html
+++ b/src/app/categorias/categorias/categorias.component.html
@@ -3,19 +3,20 @@
   <h2 class="text-2x1 font-semibold text-gray-700 mb-4">Nova categoria</h2>
 
   <hr />
-  <form class="categoriaForm">
+  <form class="categoriaForm" [formGroup]="camposForm" (ngSubmit)="salvar()">
     <!-- campo nome -->
     <div class="mb-4">
       <label class="block text-gray-600 font-medium mb-2">Nome</label>
       <input type="text"
               id="nome"
               name="nome"
+              formControlName="nome"
               placeholder="Ex: Restaurantes, Praias, Shopping"
               class="w-full p-3 border border-gray-300 rounded shadow-sm focus:ring focus:ring-blue-400"
               required
               />
 
-      <span class="text-red-500 text-sm">
+      <span class="text-red-500 text-sm" *ngIf="isCampoInvalido('nome')">
         Campo obrigatório
       </span>
 
@@ -29,13 +30,14 @@
               rows="4"
               id="descricao"
               name="descricao"
-              placeholder="Ex: Restaurantes, Praias, Shopping"
+              formControlName="descricao"
+              placeholder="Descrição do lugar"
               class="w-full p-3 border border-gray-300 rounded shadow-sm focus:outline-none focus:ring-blue-400"
               required
             >
             </textarea>
 
-      <span class="text-red-500 text-sm">
+      <span class="text-red-500 text-sm" *ngIf="isCampoInvalido('descricao')">
         Campo obrigatório
       </span>
   </div>
