--- a/src/app/galeria/galeria/galeria.component.html
+++ b/src/app/galeria/galeria/galeria.component.html
@@ -1,22 +1,33 @@
 <!-- Filtros -->
-<div class="p-4 bg-white shadow">
-  <div class="flex flex-col md: flex-row itens-center justify-center gap-4">
+<form #frm="ngForm">
+  <div class="p-4 bg-white shadow">
+    <div class="flex flex-col md: flex-row itens-center justify-center gap-4">
 
-    <input type="text"
-           placeholder="Pesquise pelo nome do local"
-           class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400"
-    />
+      <input type="text"
+            name="nomeFiltro"
+            [(ngModel)]="nomeFiltro"
+            placeholder="Pesquise pelo nome do local"
+            class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400"
+      />
 
-    <select class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400">
-      <option [value]="">Todas as categorias</option>
-      <option *ngFor="let cat of categoriasFiltro" [value]="cat.nome">{{ cat.nome }}</option>
-    </select>
+      <select
+            name="categoriaFiltro"
+            [(ngModel)]="categoriaFiltro"
+            class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400">
+        <option [value]="">Todas as categorias</option>
+        <option *ngFor="let cat of categoriasFiltro" [value]="cat.nome">{{ cat.nome }}</option>
+      </select>
+
+      <button (click)="filtrar()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-800">
+        Pesquisar
+      </button>
+
+
+    </div>
 
 
   </div>
-
-
-</div>
+</form>
 
 <!-- Lista de lugares -->
 
