--- a/src/app/galeria/galeria/galeria.component.html
+++ b/src/app/galeria/galeria/galeria.component.html
@@ -14,7 +14,7 @@
             name="categoriaFiltro"
             [(ngModel)]="categoriaFiltro"
             class="w-full border border-gray-300 p-2 rounded shadow-sm focus:ring focus:ring-blue-400">
-        <option [value]="">Todas as categorias</option>
+        <option [value]="-1">Todas as categorias</option>
         <option *ngFor="let cat of categoriasFiltro" [value]="cat.nome">{{ cat.nome }}</option>
       </select>
 
